# Any-KVM

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
.github/skills/deploy-test/: SKILL.md
.github/skills/deploy-test/scripts/: build-agent.sh  deploy-signal.sh  remote-logs.sh  run-agent.sh  stop-signal.sh  verify.sh
.github/workflows/: auto-deploy.yml  build-release.yml  deploy-server-password.yml
agent/: Cargo.toml  Cross.toml  Dockerfile.armv7  config.toml  config.toml.example
agent/patches/str0m-0.5.1/: .cargo_vcs_info.json  Cargo.toml
agent/patches/str0m-0.5.1/src/crypto/ossl/: cert.rs
agent/src/: audio.rs  config.rs  hid.rs  main.rs  signal_client.rs  video.rs  webrtc.rs
deploy/: Dockerfile.signal  coturn.conf  docker-compose.yml  env.example
docs/: 01-requirements.md  02-architecture.md  wankeyun-hid-setup.md
scripts/: any-kvm-agent-wrapper.sh  any-kvm-agent.service  build-and-package.sh  quick-check-hid.sh  setup-hid-gadget.sh  test-hid-mouse.sh
signal/: go.mod  main.go
web/: app.js  index.html  style.css
